--- a/www/index.html
+++ b/www/index.html
@@ -4,13 +4,33 @@
   <title>QTC-Net</title>
  </head>
  <body>
+<center>
 <h1>QTC-Net</h1>
-<h2>A Radio-Telegram Network for Ham Radio</h2>
-This is what I am planning to build: 
+<h2>A Short Telegram System for Amateur Radio</h2>
+</center>
+<hr>
 <img src="QTC-Net.svg"><br>
-And <a href="qtc-net-draft.txt">here is the link</a> to the draft, telling you what is the plan and how it will work. 
+This ugly graphic trys to illustrate the network, it is somewhat ugly and too complicated, 
+and will be exchanged soon, but I have really trouble to explain QTC Net in two 
+scentences. <br>
+The net is basically a decentralized drop off point for short telegrams from one operator 
+to another operator. The Messages are all public as it is for Amateur Radio Service. The 
+Transfer from one endpoint station to the Network or the other way round will mostly be 
+done manually, by having a friendly operator (who may chease some delivery points for 
+a diplome) in the middle who has access to the Network. 
 <br>
-My Mail is zem at fnordpol.de aka OE1SRC. 
+The easiest way to access the network ist via Internet, but anyway the messages and 
+Interserver communications are designed to be transmitted via Radio Links as well, 
+if there is enough bandwidth. 
+<br>
+
+<hr>
+<h3>Development:</h3>
+The Development will take place on <a href="https://github.com/zem/qtc-net.git">GIT-HUB</a>
+
+<hr>
+<h3>Contact:</h3>
+As long as the net is not working, you can use my Mail which is zem at fnordpol.de aka OE1SRC. 
 <br>
 regards 
 <br>     Hans 
