--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,9 @@ if there is enough bandwidth.
 <br>
 <img src="QTC-Net.svg"><br>
 <hr>
+<h3>Frequently Asked Questions:</h3>
+<a href="faq.html">The FAQ is here.</a>
+<hr>
 <h3>Development:</h3>
 The Development will take place on <a href="https://github.com/zem/qtc-net.git">GIT-HUB</a>
 
