--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 </center>
 <hr>
 This ugly graphic trys to illustrate the network, it is somewhat ugly and too complicated, 
-and will be exchanged soon, but I have really trouble to explain QTC Net in two 
+and will be exchanged soon, but we have really trouble to explain QTC Net in two 
 scentences. <br>
 The net is basically a decentralized drop off point for short telegrams from one operator 
 to another operator. The Messages are all public as it is for Amateur Radio Service. The 
@@ -31,9 +31,18 @@ if there is enough bandwidth.
 The Development will take place on <a href="https://github.com/zem/qtc-net.git">GIT-HUB</a>
 
 <hr>
+<h3>Protocol:</h3>
+A Brief description of the Protocol <a href="protocol.txt">Protocol</a> this is derived from 
+the heavily brainstormed <a href="qtc-net-draft.txt">draft</a> that contains every note we did. 
+
+<hr>
 <h3>Contact:</h3>
-As long as the net is not working, you can use my Mail which is zem at fnordpol.de aka OE1SRC. 
+As long as the net is not working, you can use our Mail which is 
+<ul>
+	<li>Hans: zem at fnordpol.de aka OE1SRC</li>
+	<li>Stefan: may at fnordpol.de aka OE1GIS</li>
+</ul>
 <br>
 regards 
-<br>     Hans 
+<br>     Hans and Stefan
 </body></html>
