published message format
attached

--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,10 @@ A Brief description of the Protocol <a href="protocol.txt">Protocol</a> this is 
 the heavily brainstormed <a href="qtc-net-draft.txt">draft</a> that contains every note we did. 
 
 <hr>
+<h3>QTC-Net Message Format:</h3>
+A Brief description of the <a href="qtc-message-file-format.txt"> message format</a> 
+
+<hr>
 <h3>Contact:</h3>
 As long as the net is not working, you can use our Mail which is 
 <ul>
