--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,8 @@ The Development will take place on <a href="https://github.com/zem/qtc-net.git">
 <hr>
 <h3>Protocol:</h3>
 A Brief description of the Protocol <a href="protocol.txt">Protocol</a> this is derived from 
-the heavily brainstormed <a href="qtc-net-draft.txt">draft</a> that contains every note we did. 
+the heavily brainstormed <a href="qtc-net-draft.txt">draft</a> as well as <a href="qtc-net-draft-02.txt">draft-02</a> 
+that contains every note we did, and every idea we hat. Not everything in those drafts was useful. 
 
 <hr>
 <h3>QTC-Net Message Format:</h3>
