--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,10 @@ the heavily brainstormed <a href="qtc-net-draft.txt">draft</a> as well as <a hre
 that contains every note we did, and every idea we hat. Not everything in those drafts was useful. 
 
 <hr>
+<h3>HTTP Interface:</h3>
+A Brief description of <a href="http_interface.txt">an http interface for QTC Network</a> 
+
+<hr>
 <h3>QTC-Net Message Format:</h3>
 A Brief description of the <a href="qtc-message-file-format.txt"> message format</a> 
 
