--- a/www/index.html
+++ b/www/index.html
@@ -7,11 +7,16 @@
 <center>
 <h1>QTC-Net</h1>
 <h2>A Short Telegram System for Amateur Radio</h2>
+<h2>ALPHA Version</h2>
 </center>
 <hr>
+<p> QTC-Net is a decentralized telegram distribution system for amateur radio, it can be used to 
+contact an operator without knowing his current location or radio equitment. It is designed 
+to be decentralized and therefor faultproof, but it also trys to address security questions as 
+long as this is important for public amateur radio messages.  </p>
 <img src="QTC-Net.svg"><br>
 <hr>
-This ugly graphic trys to illustrate the network, it is somewhat ugly and too complicated, 
+This graphic trys to illustrate the network, it is somewhat ugly and too complicated, 
 and will be exchanged soon, but we have really trouble to explain QTC Net in two 
 scentences. <br>
 The net is basically a decentralized drop off point for short telegrams from one operator 
@@ -24,6 +29,10 @@ The easiest way to access the network ist via Internet, but anyway the messages 
 Interserver communications are designed to be transmitted via Radio Links as well, 
 if there is enough bandwidth. 
 <hr>
+<h3>Web Access URLs</h3>
+<p><a href="https://www.qtc-net.org/">https://www.qtc-net.org/</a> runs a small webapp which is the easies way to get access. </p>
+<p>If you have your own application, right now there is one linux commandline thingie in the Source code, or if you want to run your own message server you can access the http interface via https://www.qtc-net.org/qtc-if.cgi in your application, or message downloader.</p>
+
 <h3>Frequently Asked Questions:</h3>
 <a href="faq.html">The FAQ is here.</a>
 <hr>
