--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,9 @@ if there is enough bandwidth.
 <hr>
 <h3>Web Access URLs</h3>
 <p><a href="https://www.qtc-net.org/">https://www.qtc-net.org/</a> runs a small webapp which is the easies way to get access. </p>
-<p>If you have your own application, right now there is one linux commandline thingie in the Source code, or if you want to run your own message server you can access the http interface via https://www.qtc-net.org/qtc-if.cgi in your application, or message downloader.</p>
+<p>If you have your own application, right now there is one linux commandline thingie in the Source code, or 
+if you want to run your own message server you can access the http interface via 
+http://www.qtc-net.org/qtc-if.cgi in your application, or message downloader.</p>
 
 <h3>Frequently Asked Questions:</h3>
 <a href="faq.html">The FAQ is here.</a>
