no linebreak after protocol

--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@ if you want to run your own message server you can access the http interface via
 http://www.qtc-net.org/qtc-if.cgi in your application, or message downloader.</p>
 <hr>
 <h3>Protocol:</h3>
-A Brief description of the Protocol <a href="protocol.txt">Protocol</a> <hr>
+A Brief description of the Protocol <a href="protocol.txt">Protocol</a> 
 <h3>HTTP Interface:</h3>
 A Brief description of <a href="http_interface.txt">an http interface for QTC Network</a> 
 <h3>QTC-Net Message Format:</h3>
