rss feed announce

--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,9 @@ if there is enough bandwidth.
 <p><a href="https://www.qtc-net.org/">https://www.qtc-net.org/</a> runs a small webapp which is the easies way to get access. </p>
 <p>If you have your own application, right now there is one linux commandline thingie in the Source code, or 
 if you want to run your own message server you can access the http interface via 
-http://www.qtc-net.org/qtc-if.cgi in your application, or message downloader.</p>
+<b>http://www.qtc-net.org/qtc-if.cgi</b> in your application, or message downloader.</p>
+<p>You may look for new messages via RSS Feed at <b>http://www.qtc-net.org/qtc-rss.cgi?call=oe1src&call=oe1gis</b> an 
+optional type parameter can help you to specify what messages you are looking for</p>
 <hr>
 <h3>Protocol:</h3>
 A Brief description of the Protocol <a href="protocol.txt">Protocol</a> 
