webapp function name switch webapp describes the net network description in index.html updated

--- a/www/index.html
+++ b/www/index.html
@@ -10,21 +10,18 @@
 <h2>ALPHA Version</h2>
 </center>
 <hr>
-<p> QTC-Net is a decentralized telegram distribution system for amateur radio, it can be used to 
-contact an operator without knowing his current location or radio equitment. It is designed 
-to be decentralized and therefor faultproof, but it also trys to address security questions as 
-long as this is important for public amateur radio messages.  </p>
-<img src="QTC-Net.svg"><br>
-<hr>
-The net is basically a decentralized drop off point for short telegrams from one operator 
-to another operator. The Messages are all public as it is for Amateur Radio Service. The 
-Transfer from one endpoint station to the Network or the other way round will mostly be 
-done manually, by having a friendly operator (who may chease some delivery points for 
-a diplome) in the middle who has access to the Network. 
-<br>
-The easiest way to access the network ist via Internet, but anyway the messages and 
-Interserver communications are designed to be transmitted via Radio Links as well, 
-if there is enough bandwidth. 
+
+<p>QTC Net is a decentralized telegram system for amateur radio. A user can check in a telegram 
+from any sender to any receiver, as well as access those telegrams and mark them as delivered when 
+they are delivered.</p>
+
+<img src="QTC-Net.svg">
+
+<p>The network itself basicly consists of signed messages that are spreaded between the network nodes. 
+A message may contain a telegram as well as other information like the delivery notification 
+(called qsp). The message format is designed to have a small sized footprint. It is also unencrypted 
+therefore it is legal to transmit a message itself over a radio link.</p>
+
 <hr>
 <h3>Web Access URLs</h3>
 <p><a href="https://www.qtc-net.org/">https://www.qtc-net.org/</a> runs a small webapp which is the easies way to get access. </p>
