quick interface doku

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,8 @@ A Brief description of <a href="http_interface.txt">an http interface for QTC Ne
 A Brief description of the <a href="qtc-message-file-format.txt"> message format</a> 
 <h3>PERL Manpages:</h3>
 A Brief description of the <a href="pod/">pod manpages</a> 
+<h3>QuickInterface:</h3>
+if you want to connect only App younameit without implementing the full protocol you may have a look at the  <a href="quick-interface.txt">qtc::WebApp's Quick XML Interface</a> 
 <hr>
 <h3>Development:</h3>
 The Development will take place on <a href="https://github.com/zem/qtc-net.git">GIT-HUB</a>
