--- a/www/index.html
+++ b/www/index.html
@@ -50,16 +50,18 @@ The Development will take place on <a href="https://github.com/zem/qtc-net.git">
 <h3>Development Status:</h3>
 An alpha version as preview is released. This means the code is still changing a lot. 
 <ul>
-	<li>qsolog is an 'I would like to be an adif logger when I am grown up' program that we use to test message creation</li>
 	<li>qtc::publish is a library and all you need to include to publish qtc messages</li>
 	<li>qtc::query is a library and all you need to include if you want to query for a set of qtc messages</li>
 	<li>qtc::processor is responsible for sorting all the messages into the filesytem structure</li>
 	<li>qtc::WebApp is an example web frontend</li>
 	<li>qtc::interface::http implements an incremential download interface via HTTP</li>
+	<li>We have an rss feed</li>
+	<li>qtc::aprs::is implements an APRS gateway, please start your gateway</li>
 </ul>
 So far if you want to see the code: qtc::msg module is already pod documented. It would be good to have that on 
 the rest of the code as well. So if you want to contribute just make a pull request on GIT-HUB. Or write a 
-Feedback or Bugreport. 
+Feedback or Bugreport. All bugs are filed via GitHubs BTS, we are also using that list as a Tasklist so 
+we do not forget anything. 
 <hr>
 
 <h3>Frequently Asked Questions:</h3>
