--- a/www/faq.html
+++ b/www/faq.html
@@ -49,9 +49,13 @@ especially if you are remote. User Counts are dropping. But the same rules than 
 here as well. It is perfectly good to Transport QTC-Net Telegrams through Packet Radio. However 
 we do not have a spec for this yet. 
 
-
 <h4>What about Winlink and PSK Mail?</h4>
 We are planning to integrate QTC Net within PSKMail. So PSK Mail can serve as a client for 
 QTC-Net, and extent the Network. 
+
+<h4>Do I have to use Your server?</h4>
+NO, every Server has the same Data and the Same privileges. If you decide to Integrate 
+QTC Net for example to your Callbook, you can set up your own server, this also extends 
+the Network. 
 
 </body></html>
