--- a/www/index.html
+++ b/www/index.html
@@ -31,18 +31,20 @@ if you want to run your own message server you can access the http interface via
 <p>You may look for new messages via RSS Feed at <b>http://www.qtc-net.org/qtc-rss.cgi?call=oe1src&call=oe1gis</b> an 
 optional type parameter can help you to specify what messages you are looking for</p>
 <hr>
-<h3>Protocol:</h3>
-A Brief description of the Protocol <a href="protocol.txt">Protocol</a> 
-<h3>HTTP Interface:</h3>
-A Brief description of <a href="http_interface.txt">an http interface for QTC Network</a> 
-<h3>QTC-Net Message Format:</h3>
-A Brief description of the <a href="qtc-message-file-format.txt"> message format</a> 
+<h3>Standards:</h3>
+The first standard Documents, Those will help you to code your own implementation:<a href="standards/">Standards</a>
 <h3>PERL Manpages:</h3>
 A Brief description of the <a href="pod/">pod manpages</a> 
+
+<hr>
+Other Documents: 
+<h3>HTTP Interface:</h3>
+A Brief description of <a href="http_interface.txt">an http interface for QTC Network</a> 
 <h3>APRS Gateway:</h3>
-A Brief description of the <a href="aprs-gateway.txt">aprs gateway to QTC net</a> 
+A Brief description of the <a href="aprs-gateway.txt">aprs gateway to QTC net (deprecated needs new documentation)</a> 
 <h3>QuickInterface:</h3>
 if you want to connect only App younameit without implementing the full protocol you may have a look at the  <a href="quick-interface.txt">qtc::WebApp's Quick XML Interface</a> 
+
 <hr>
 <h3>Development:</h3>
 The Development will take place on <a href="https://github.com/zem/qtc-net.git">GIT-HUB</a>
