index + more innovations

--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,8 @@
 </center>
 <hr>
 
-<p>QTC Net is a decentralized telegram system for amateur radio. A user can check in a telegram 
-from any sender to any receiver, as well as access those telegrams and mark them as delivered when 
+<p>QTC Net is a decentralized telegram and microblog system for amateur radio. A user or ham system can check in 
+a telegram from any sender to any receiver, as well as access those telegrams and mark them as delivered when 
 they are delivered.</p>
 
 <img src="QTC-Net.svg">
@@ -21,6 +21,9 @@ they are delivered.</p>
 A message may contain a telegram as well as other information like the delivery notification 
 (called qsp). The message format is designed to have a small sized footprint. It is also unencrypted 
 therefore it is legal to transmit a message itself over a radio link.</p>
+
+<p>There are gateways to DXCluster, APRS, RSS-Feed and WebPages available and many more links like DMR, 
+PSKMail, PSK31, are planned.</p>
 
 <hr>
 <h3>Web Access URLs</h3>
