network status table

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,62 @@ therefore it is legal to transmit a message itself over a radio link.</p>
 PSKMail, PSK31, are planned.</p>
 
 <hr>
+<h3>Known QTC Net Nodes</h3>
+<table>
+	<th>
+		<td><b>Name</b></td>
+		<td><b>Type</b></td>
+		<td><b>Owner</b></td>
+		<td><b>Address</b></td>
+		<td><b>Sync Address</b></td>
+		<td><b>Other Services</b></td>
+	</th>
+	<tr>
+		<td>QTC Net ORG</td>
+		<td>Internet Node</td>
+		<td>OE1SRC</td>
+		<td>https://www.qtc-net.org/qtc-web.cgi</td>
+		<td>http://www.qtc-net.org/qtc-if.cgi</td>
+		<td>
+			<ul>
+				<li>RSS: <i>http://www.qtc-net.org/qtc-rss.cgi</i></li>
+				<li>APRS Gateway (Signs OE1SRC)</li>
+				<li>DXSpider: <i>OE1XGB at qtc-net.org 7300</i></li>
+			</ul>
+		</td>
+	</tr>
+	<tr>
+		<td>qtc-net.ampr.at</td>
+		<td>Internet to Hamnet Node (planned)</td>
+		<td>OE1SRC</td>
+		<td>http://qtc-net.ampr.at/qtc-web.cgi</td>
+		<td>http://qtc-net.ampr.at/qtc-if.cgi</td>
+		<td>
+			<ul>
+				<li>RSS (Hamnet): <i>http://qtc-net.ampr.at/qtc-rss.cgi</i></li>
+				<li>APRS Gateway</li>
+				<li>DXSpider: <i>OE1XGB-2 at qtc-net.ampr.at 7300</i></li>
+			</ul>
+		</td>
+	</tr>
+	<tr>
+		<td>localhost</td>
+		<td>Development Laptop</td>
+		<td>OE1SRC</td>
+		<td>http://localhost/qtc-web.cgi</td>
+		<td>http://localhost/qtc-if.cgi</td>
+		<td>
+			<ul>
+				<li>RSS (Hamnet): <i>http://localhost/qtc-rss.cgi</i></li>
+				<li>APRS Gateway occasionaly</li>
+				<li>DXSpider: <i>OE1XGB-3 at localhost 7300</i></li>
+			</ul>
+		</td>
+	</tr>
+</table>
+
+
+<hr>
 <h3>Web Access URLs</h3>
 <p><a href="https://www.qtc-net.org/">https://www.qtc-net.org/</a> runs a small webapp which is the easies way to get access. </p>
 <p>If you have your own application, right now there is one linux commandline thingie in the Source code, or 
