fix network table

--- a/www/index.html
+++ b/www/index.html
@@ -28,14 +28,14 @@ PSKMail, PSK31, are planned.</p>
 <hr>
 <h3>Known QTC Net Nodes</h3>
 <table>
-	<th>
-		<td><b>Name</b></td>
-		<td><b>Type</b></td>
-		<td><b>Owner</b></td>
-		<td><b>Address</b></td>
-		<td><b>Sync Address</b></td>
-		<td><b>Other Services</b></td>
-	</th>
+	<tr>
+		<th><b>Name</b></th>
+		<th><b>Type</b></th>
+		<th><b>Owner</b></th>
+		<th><b>Address</b></th>
+		<th><b>Sync Address</b></th>
+		<th><b>Other Services</b></th>
+	</tr>
 	<tr>
 		<td>QTC Net ORG</td>
 		<td>Internet Node</td>
